--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,13 @@ after_success:
       mkdir ~/.pgp
       echo $PGP_PUBLIC | base64 --decode > ~/.pgp/pubring
       echo $PGP_SECRET | base64 --decode > ~/.pgp/secring
+      echo "Publishing release"
       sbt ++$TRAVIS_SCALA_VERSION publishSigned
     elif [ "$TRAVIS_PULL_REQUEST" == false ] && [ "$TRAVIS_BRANCH" == master ]; then
       mkdir ~/.pgp
       echo $PGP_PUBLIC | base64 --decode > ~/.pgp/pubring
       echo $PGP_SECRET | base64 --decode > ~/.pgp/secring
+      echo "Publishing snapshot"
       sbt ++$TRAVIS_SCALA_VERSION publishSigned
     fi
 deploy:
