--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,13 @@ cache:
 
 after_success:
   - |
-    if [ -n "$TRAVIS_TAG" ]; then
+    if [ -n "$TRAVIS_TAG" ] || ([ "$TRAVIS_PULL_REQUEST" == false] && [ "$TRAVIS_BRANCH" == master ])
+    then
       mkdir ~/.pgp
-      echo $PGP_PUBLIC | base64 --decode > ~/.pgp/pubring
-      echo $PGP_SECRET | base64 --decode > ~/.pgp/secring
-      echo "Publishing release"
-      sbt ++$TRAVIS_SCALA_VERSION publishSigned
-    elif [ "$TRAVIS_PULL_REQUEST" == false ] && [ "$TRAVIS_BRANCH" == master ]; then
-      mkdir ~/.pgp
-      echo $PGP_PUBLIC | base64 --decode > ~/.pgp/pubring
-      echo $PGP_SECRET | base64 --decode > ~/.pgp/secring
+      echo $PGP_PUBLIC > ~/.pgp/pubring
+      echo $PGP_SECRET > ~/.pgp/secring
       echo "Publishing snapshot"
-      sbt ++$TRAVIS_SCALA_VERSION publishSigned
+      sbt xtract/publishSigned xtractTesting/publishSigned
     fi
 deploy:
   api_key: $GITHUB_AUTH
