--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
     - $HOME/.sbt/boot/
 
 after_success:
+  - sbt ++$TRAVIS_SCALA_VERSION package
   - |
     if [ -n "$TRAVIS_TAG" ] || ([ "$TRAVIS_PULL_REQUEST" == false ] && [ "$TRAVIS_BRANCH" == master ])
     then
@@ -36,13 +37,7 @@ deploy:
   on:
     tags: true
 
-install:
-  - sbt ++$TRAVIS_SCALA_VERSION update
-
-script:
-  - sbt ++$TRAVIS_SCALA_VERSION test
-  - sbt ++$TRAVIS_SCALA_VERSION package
-
+before_cache:
   #Avoid unncessary cache updates
-  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.sbt/boot -name "*.lock" | xargs rm
   - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
