--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ deploy:
   on:
     tags: true
 
+install: sbt ++$TRAVIS_SCALA_VERSION update
 before_cache:
   #Avoid unncessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -print -delete
