--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ sudo: false
 cache:
   directories:
     - $HOME/.ivy2/cache
-    - $HOME/.sbt/
+    - $HOME/.sbt/boot
+    - $HOME/.coursier
 
 after_success:
   - |
@@ -44,10 +45,9 @@ before_script:
 
 script:
   - sbt ++$TRAVIS_SCALA_VERSION compile packageBin packageDoc packageSrc
-  - sbt -debug ++$TRAVIS_SCALA_VERSION test
+  - sbt ++$TRAVIS_SCALA_VERSION test
 
 install: sbt ++$TRAVIS_SCALA_VERSION update
 before_cache:
   #Avoid unncessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt  -name "*.lock" -print -delete
