Add support for scala 2.13
Fixes #23

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: scala
 
 scala:
   - 2.11.12
-  - 2.12.9
+  - 2.12.10
+  - 2.13.1
 
 jdk:
   - openjdk8
 
-dist: trusty
+dist: xenial
 sudo: false
 
 cache:
