--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,20 @@ jobs:
             ~/.ivy2/cache
             ~/.sbt
             ~/.coursier
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ matrix.scala_version }}
+            target/
+            */target/
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/*.scala') }}
           restore-keys: |
             ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-
+            ${{ runner.os }}-sbt-
       - name: Build
         run: sbt compile packageBin packageDoc packageSrc
       - name: Test
         run: sbt test
       - uses: actions/upload-artifact@v2
         with:
-          name: target
-          path: '*/target/'
+          name: jars
+          path: '*/target/*/*.jar'
           retention-days: 1
   publish:
     if: github.event_name != 'pull_request'
@@ -46,25 +49,25 @@ jobs:
             ~/.ivy2/cache
             ~/.sbt
             ~/.coursier
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ matrix.scala_version }}
-          restore-keys: |
-            ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-
-      - uses: actions/download-artifact@v2
-        with:
-          name: target
+            target/
+            */target/
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/*.scala') }}
       - name: Publish to Sonatype
         run: bash publish.sh
         env:
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
   release:
     if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
+      - uses: actions/checkout@v2
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: target
+          name: jars
       - name: Upload assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
